This patch by Markus Kaufhold <M.Kaufhold@gmx.de> solves the following problem: "Pause during crossfade using xine causes the next song to continue playing."

Also it provides a number of safety code improvements.

BUG: 122514

svn path=/trunk/extragear/multimedia/amarok/; revision=586431